--- a/css/style-fases.css
+++ b/css/style-fases.css
@@ -1,3 +1,4 @@
+/* MOBIELE VERSIE */
 a {
     text-decoration: none;
     color: black;
@@ -16,10 +17,38 @@ body {
 .titel-fase1 h1 {
 
     text-align: center;
-    font-size: 70pt;
+    font-size: 45pt;
     font-weight: bold;
+    margin: 0 auto;
+    margin-top: 25px;
 
 }
+
+
+.titel-fase2 h1 {
+
+    text-align: center;
+    font-size: 45pt;
+    font-weight: bold;
+    margin: 0 auto;
+    margin-top: 55px;
+    border-top: 3px solid #e70000;
+    padding-top: 45px;
+
+}
+
+.titel-fase3 h1 {
+
+    text-align: center;
+    font-size: 45pt;
+    font-weight: bold;
+    margin: 0 auto;
+    margin-top: 55px;
+    border-top: 3px solid #e70000;
+    padding-top: 45px;
+
+}
+
 
 /* .topnav {
     text-align: center;
@@ -33,19 +62,11 @@ body {
 
 
 
-.topnav a {
-    font-size: 14px;
-    text-decoration: none;
-    color: red;
-    margin: 0;
-    padding: 0;
-    margin-left: 30px;
-}
 
 .fase1 {
     margin-bottom: 50px;
     margin-top: 3em;
-    padding-top: 3em;
+    padding-top: 8em;
 }
 
 .fase1 p {
@@ -53,11 +74,13 @@ body {
     font-size: 16px;
     margin: 0;
     padding: 0;
+    padding-bottom: 50px;
 
 }
 
 .container-fases {
     padding: 50px;
+    padding-top: 0.5em;
 
 }
 
@@ -73,11 +96,22 @@ img {
 }
 
 .text2 h2 {
-    border-top: 3px solid #e70000;
+    font-size: 12pt;
+    /* border-top: 3px solid #e70000; */
 
 }
 
-#fase-redirection {
+.text2 ul {
+    font-size: 12pt;
+}
+
+.container-fase1 {
+    background: lightgrey;
+    padding: 20px;
+}
+
+/* NIET VAN TOEPASSING ALS ONEPAGE WEBSITE */
+/* #fase-redirection {
     font-size: 10px;
     padding: 10px;
     border: 1px solid #1e403b;
@@ -91,9 +125,53 @@ img {
     margin-left: 2em;
     bottom: 0;
     right: 50px;
+} */
+
+/* p {
+    padding-top: 25px;
+    margin: 20px;
+} */
+
+
+/* TEST BACKGROUND FASE 1 VANAF 420PX NIET MINDER! */
+#img-fase1 {
+    position: absolute;
+    width: 45%;
+    margin: 0 auto;
+    margin-left: 35%;
+    margin-top: 5em;
 }
 
 
+/* FASE 2 EN FASE 3 */
+
+img {
+
+    width: 100%;
+    margin: 0 auto;
+    /* margin-left: 70%;
+    margin-top: 3em; */
+}
+
+
+/* EINDE MOBIEL VERSIE */
+
+
+
+
+/* NOG NIET AANGEPAST!!! */
+@media (min-width: 600px) {
+    .container-fase1 {
+        display: flex;
+    }
+
+    img {
+        width: 100%;
+        margin: 0 auto;
+    }
+}
+
+/* NOG NIET AANGEPAST!!! */
 @media (min-width: 950px) {
 
     #fase2-body {
@@ -190,9 +268,9 @@ img {
         /* background-color: yellow; */
     }
 
-    .text2 h2 {
+    .text h2 {
 
-        font-size: 15pt;
+        font-size: 10pt;
 
         padding-top: 10px;
         margin-top: 50px;
@@ -238,7 +316,13 @@ img {
     }
 
 
-    #fase-redirection {
+
+
+    /* 
+    BUTTON REDIRECTION (niet van toepassing als we one page website hebben) */
+
+
+    /* #fase-redirection {
         font-size: 17px;
         padding: 15px;
         border: 1px solid #1e403b;
@@ -268,5 +352,5 @@ img {
         margin-left: 2em;
         bottom: 0;
 
-    }
+    } */
 }
