--- a/css/style.css
+++ b/css/style.css
@@ -280,6 +280,7 @@ section.homePage {
   width: 100%;
   z-index: 99;
   overflow: hidden;
+  background-color: white;
 }
 
 .topnav a {
@@ -1117,19 +1118,19 @@ input[type=submit] {
 input[type=submit]:hover {
 
   background-color: #DC143C;
-  
-  }
-  
-  
-  
-  /* Add a background color and some padding around the form */
-  
-  .container-formulier {
-  
+
+}
+
+
+
+/* Add a background color and some padding around the form */
+
+.container-formulier {
+
   border-radius: 5px;
-  
+
   background-color: #f2f2f2;
-  
+
   padding: 20px;
-  
-  }
+
+}
